/*
Connection
*/

#ifndef __NEURAL_NETWORK_CONNECTION__
#define __NEURAL_NETWORK_CONNECTION__

namespace neural_network
{

struct Connection
{
    double weight;
};

} // namespace neural_network
#endif //__NEURAL_NETWORK_CONNECTION__