/*
storage
*/


#ifndef __NEURAL_NETWORK_I_MATH__
#define __NEURAL_NETWORK_I_MATH__

namespace neural_network
{
    
class IMath
{

};
 
} // namespace neural_network
 #endif //__NEURAL_NETWORK_I_MATH__