/*
layer
*/

#ifndef __NEURAL_NETWORK_LAYER__
#define __NEURAL_NETWORK_LAYER__

namespace neural_network
{

    class Layer
    {
    };

} // namespace neural_network
#endif //__NEURAL_NETWORK_LAYER__